--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,6 +7,8 @@ parameters:
     emailFrom: '%env(resolve:MAILER_FROMADDR)%'
     serverURL: '%env(resolve:SERVER_URL)%'
     imageLimit: '%env(resolve:IMAGE_LIMIT)%'
+    timezone: '%env(APP_TIMEZONE)%'
+
 services:
     # default configuration for services in *this* file
     _defaults:
