--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "phpdocumentor/reflection-docblock": "^5.3",
     "phpstan/phpdoc-parser": "^1.22",
     "ramsey/uuid": "^4",
+    "sabberworm/php-css-parser": "^8.4",
     "symfony/asset": "6.3.*",
     "symfony/console": "6.3.*",
     "symfony/doctrine-messenger": "6.3.*",
